# i2c-wasm-components

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: main.yml
command/: Cargo.toml
command/src/: bindings.rs  lib.rs
guest/: Cargo.toml  build.sh  guest.component.wasm  wasi_snapshot_preview1.reactor.wasm
guest/hat/: Cargo.toml
guest/hat/src/: bindings.rs  lib.rs
guest/lcd/: Cargo.toml
guest/lcd/src/: bindings.rs  lib.rs
guest/src/: bindings.rs  lib.rs
guest/wit/: world.wit
host/: Cargo.toml
host/src/: device.rs  main.rs
host/src/device/: screen.rs  sensor.rs
native/: Cargo.toml
native/hat/: Cargo.toml
native/hat/benches/: sensor_read.rs
native/hat/report/: index.html
native/hat/src/: lib.rs  main.rs
native/lcd/: Cargo.toml
native/lcd/benches/: lcd_write.rs
native/lcd/report/: index.html
native/lcd/src/: lib.rs  main.rs
native/segment_led/pi/: Cargo.toml
native/segment_led/pi/benches/: segment_write.rs
native/segment_led/pi/report/: index.html
native/segment_led/pi/report_old/: index.html
native/segment_led/pi/src/: lib.rs  main.rs
native/segment_led/pico/: Cargo.toml  memory.x
native/segment_led/pico/.cargo/: config.toml
native/segment_led/pico/src/: main.rs
native/segment_led/pico_cpp/: CMakeLists.txt  README.md  segments_i2c.c
wamr/: README.md
wamr/guest/: Cargo.toml
wamr/guest/.cargo/: config.toml
wamr/guest/src/: lib.rs
wamr/host/: Cargo.toml  dhat-heap.json
wamr/host/benches/: segment_write.rs
wamr/host/report/: index.html
wamr/host/src/: lib.rs  main.rs
wamr/host_pico/: Cargo.toml
wamr/host_pico/.cargo/: config.toml
wamr/host_pico/src/: main.rs
wamr/report_old/: index.html
wasmtime/: Justfile  README.md
wasmtime/guest/: Cargo.toml
wasmtime/guest/hat/: Cargo.toml
wasmtime/guest/hat/src/: bindings.rs
wasmtime/guest/lcd/: Cargo.toml
wasmtime/guest/lcd/src/: bindings.rs
wasmtime/guest/segment_led/: Cargo.toml
wasmtime/guest/segment_led/src/: lib.rs
wasmtime/host/: Cargo.toml
wasmtime/host/benches/: sensor_read.rs
wasmtime/host/report/: index.html
wasmtime/host/report/compiled_led_write/: index.html
wasmtime/host/report/lcd_write/: index.html
wasmtime/host/report/led_write/: index.html
wasmtime/host/report/optim_compiled_led_write/: index.html
wasmtime/host/report/optim_compiled_sensor_read/: index.html
wasmtime/host/report/sensor_read/: index.html
wasmtime/host/src/: device.rs  display.rs  hat.rs  lib.rs  main.rs  sensor.rs
wasmtime/wit/: deps.toml  device.wit
wit/: device.wit  embedded.wit  my-component.wit  screen.wit  sensor.wit  wip.wit
