[package]
name = "command"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.5.0"
lol_alloc = "0.4.1"
wit-bindgen-rt = { version = "0.22.0", default-features = false }
compiler_builtins = { version = "0.1.108", features = ["mem"] }

[package.metadata.component]
package = "sketch:implementation"
adapter = "../empty.wasm"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../wit/device.wit"
world = "app"

[package.metadata.component.target.dependencies]
"wasi:i2c" = { path = "../wit/deps/i2c" }

[package.metadata.component.bindings]
# Enable this to put `std` usage behind a feature, so that we can use `no_std`.
std_feature = true
