[workspace]

[package]
name = "guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"]}

[package.metadata.component]
package = "component:guest"

[package.metadata.component.target]
path = "../wit/my-component.wit"
world = "i2c-app"

[package.metadata.component.dependencies]
