[package]
name = "thesis"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
    "realloc",
] }
hd44780-driver = { git = "https://github.com/ichdenkenicht/hd44780-driver.git" }
embedded-hal = "1.0.0"

[package.metadata.component]

[package.metadata.component.target]
path = "../wit"

[package.metadata.component.target.dependencies]
