[package]
name = "thesis"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = "0.4.0"
bitflags = "2.4.2"
wit-bindgen-rt = "0.20.0"
compiler_builtins = { version = "0.1.108", features = ["mem"] }

[package.metadata.component]
# We don't need an adapter, but cargo-component doesn't yet have an option to
# disable the adapter. As a workaround, use an empty adapter.
adapter = "empty.wasm"

[package.metadata.component.target]
path = "../wit"

[package.metadata.component.target.dependencies]

[package.metadata.component.bindings]
# Enable this to put `std` usage behind a feature, so that we can use `no_std`.
std_feature = true
