[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
futures = { version = "0.3.29", features = ["executor"] }
wasmtime = "17.0.1"
wasmtime-wasi = "17.0.1"
embedded-hal = { workspace = true }
hd44780-driver = { workspace = true }
rppal = { workspace = true }
