[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
futures = { version = "0.3.29", features = ["executor"] }
wasmtime = "17.0.1"
wasmtime-wasi = "17.0.1"
embedded-hal = "1.0.0"
# PR with embedded-hal v1 support
hd44780-driver = { git = "https://github.com/ichdenkenicht/hd44780-driver.git" }
rppal = { version = "0.17.0", features = ["hal"] }
wit-component = "0.21.0"
