[package]
name = "hat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hts221 = { git = "https://github.com/Zelzahn/hts221" }
anyhow = "1.0.80"
embedded-hal = "1.0.0"
linux-embedded-hal = { version = "0.4.0", features = ["i2cdev"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sensor_read"
harness = false
