[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
wasmtime = "19.0.0"
wasmtime-wasi = "19.0.0"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
i2cdev = "0.6.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sensor_read"
harness = false
