[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
wasmtime = { version = "21.0.0", default-features = false, features = [
  'cache',
  'gc',
  'parallel-compilation',
  'cranelift',
  'pooling-allocator',
  'demangle',
  'addr2line',
  'coredump',
  'debug-builtins',
  'runtime',
  'component-model',
  'threads'
]}
wasmtime-wasi = "21.0.0"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
i2cdev = "0.6.0"
dhat = "0.3.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sensor_read"
harness = false

[profile.release]
debug = 1

[features]
dhat-heap = []
