[package]
edition = "2021"
name = "pico"
version = "0.1.0"
authors = ["Zelzahn <friedrich@friedrichvdb.be>"]
resolver = "2"

[dependencies]
# embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
# not needed
# embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
# not needed
# embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }

defmt = "0.3"
defmt-rtt = "0.4"
# both not needed
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# These 2 seems to be not needed
# futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
# heapless = "0.8"


embedded-hal = "1.0.0"
rp2040-hal = "0.10.0"
# all below not needed
# embedded-hal-async = "1.0.0"
# embedded-hal-bus = { version = "0.1.0", features = ["async"] }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#embedded-storage = { version = "0.3" }
# static_cell = "2"
# portable-atomic = { version = "1.5", features = ["critical-section"] }
# log = "0.4"
# pio-proc = "0.2"
# pio = "0.2.1"
# rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2
