[package]
name = "hat"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hts221 = { git = "https://github.com/Zelzahn/hts221" }
lol_alloc = { workspace = true }
# wit-bindgen = "0.22.0"
bitflags = { workspace = true }
wit-bindgen-rt = { workspace = true }
compiler_builtins = { workspace = true }
embedded-hal = "1.0.0"
wasi-embedded-hal = { version = "0.2.0", default-features = false, features = [
    "use_alloc",
] }

[package.metadata.component]
package = "sketch:implementation"
# We don't need an adapter, but cargo-component doesn't yet have an option to
# disable the adapter. As a workaround, use an empty adapter.
adapter = "../empty.wasm"

[package.metadata.component.target]
path = "../../wit"
world = "app"

[package.metadata.component.target.dependencies]
"wasi:i2c" = { path = "../../wit/deps/i2c" }

[package.metadata.component.bindings]
# Enable this to put `std` usage behind a feature, so that we can use `no_std`.
std_feature = true
